cleaning things up in LinterMain